--- a/lunchOrder/pom.xml
+++ b/lunchOrder/pom.xml
@@ -260,5 +260,11 @@
 		<artifactId>mariadb-java-client</artifactId>
 		<version>2.7.2</version>
 	</dependency>
+	<dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-websocket</artifactId>
+         <version>${org.springframework-version}</version>
+     </dependency>
+
   </dependencies>
 </project>
